--- a/OverlordProject/OverlordProject.vcxproj.filters
+++ b/OverlordProject/OverlordProject.vcxproj.filters
@@ -22,6 +22,7 @@
     <ClCompile Include="Scenes\Week 5\SoftwareSkinningScene_1.cpp" />
     <ClCompile Include="Scenes\Week 5\SoftwareSkinningScene_2.cpp" />
     <ClCompile Include="Scenes\Week 5\SoftwareSkinningScene_3.cpp" />
+    <ClCompile Include="Scenes\Week 6\HardwareSkinningScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h" />
@@ -44,5 +45,6 @@
     <ClInclude Include="Scenes\Week 5\SoftwareSkinningScene_1.h" />
     <ClInclude Include="Scenes\Week 5\SoftwareSkinningScene_2.h" />
     <ClInclude Include="Scenes\Week 5\SoftwareSkinningScene_3.h" />
+    <ClInclude Include="Scenes\Week 6\HardwareSkinningScene.h" />
   </ItemGroup>
 </Project>
