--- a/OverlordProject/OverlordProject.vcxproj.filters
+++ b/OverlordProject/OverlordProject.vcxproj.filters
@@ -32,6 +32,8 @@
     <ClCompile Include="Scenes\Week 8\ShadowMappingScene.cpp" />
     <ClCompile Include="Materials\Shadow\DiffuseMaterial_Shadow.cpp" />
     <ClCompile Include="Materials\Shadow\DiffuseMaterial_Shadow_Skinned.cpp" />
+    <ClCompile Include="Prefabs\Portal.cpp" />
+    <ClCompile Include="Prefabs\PortalGun.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h" />
@@ -64,5 +66,7 @@
     <ClInclude Include="Scenes\Week 8\ShadowMappingScene.h" />
     <ClInclude Include="Materials\Shadow\DiffuseMaterial_Shadow_Skinned.h" />
     <ClInclude Include="Materials\Shadow\DiffuseMaterial_Shadow.h" />
+    <ClInclude Include="Prefabs\Portal.h" />
+    <ClInclude Include="Prefabs\PortalGun.h" />
   </ItemGroup>
 </Project>
