--- a/OverlordEngine/OverlordEngine.vcxproj.filters
+++ b/OverlordEngine/OverlordEngine.vcxproj.filters
@@ -54,6 +54,8 @@
     <ClCompile Include="Managers\LightManager.cpp" />
     <ClCompile Include="Graphics\ShadowMapRenderer.cpp" />
     <ClCompile Include="Components\ParticleEmitterComponent.cpp" />
+    <ClCompile Include="Graphics\PortalMapRenderer.cpp" />
+    <ClCompile Include="Misc\PortalMapMaterial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -119,5 +121,7 @@
     <ClInclude Include="Managers\LightManager.h" />
     <ClInclude Include="Graphics\ShadowMapRenderer.h" />
     <ClInclude Include="Components\ParticleEmitterComponent.h" />
+    <ClInclude Include="Graphics\PortalMapRenderer.h" />
+    <ClInclude Include="Misc\PortalMapMaterial.h" />
   </ItemGroup>
 </Project>
