--- a/OverlordEngine/OverlordEngine.vcxproj
+++ b/OverlordEngine/OverlordEngine.vcxproj
@@ -113,6 +113,8 @@
     <ClInclude Include="Misc\ParticleMaterial.h" />
     <ClInclude Include="Misc\PostProcessingMaterial.h" />
     <ClInclude Include="Misc\ShadowMapMaterial.h" />
+    <ClInclude Include="Graphics\PortalMapRenderer.h" />
+    <ClInclude Include="Misc\PortalMapMaterial.h" />
     <ClInclude Include="Prefabs\FixedCamera.h" />
     <ClInclude Include="Prefabs\FreeCamera.h" />
     <ClInclude Include="Utils\ImguiHelper.h">
@@ -182,6 +184,8 @@
     <ClCompile Include="Misc\ParticleMaterial.cpp" />
     <ClCompile Include="Misc\PostProcessingMaterial.cpp" />
     <ClCompile Include="Misc\ShadowMapMaterial.cpp" />
+    <ClCompile Include="Graphics\PortalMapRenderer.cpp" />
+    <ClCompile Include="Misc\PortalMapMaterial.cpp" />
     <ClCompile Include="Prefabs\FixedCamera.cpp" />
     <ClCompile Include="Prefabs\FreeCamera.cpp" />
     <ClCompile Include="Utils\ImguiHelper.cpp" />
