--- a/OverlordProject/OverlordProject.vcxproj.filters
+++ b/OverlordProject/OverlordProject.vcxproj.filters
@@ -34,7 +34,7 @@
     <ClCompile Include="Materials\Shadow\DiffuseMaterial_Shadow_Skinned.cpp" />
     <ClCompile Include="Prefabs\Portal.cpp" />
     <ClCompile Include="Prefabs\PortalGun.cpp" />
-    <ClCompile Include="Materials\PortalMaterial.cpp" />
+    <ClCompile Include="Materials\Portal\PortalMaterial.cpp" />
     <ClCompile Include="Scenes\Week 9\ParticleScene.cpp" />
     <ClCompile Include="Scenes\Week 10\PostProcessingScene.cpp" />
     <ClCompile Include="Materials\Post\PostGrayscale.cpp" />
@@ -73,7 +73,7 @@
     <ClInclude Include="Materials\Shadow\DiffuseMaterial_Shadow.h" />
     <ClInclude Include="Prefabs\Portal.h" />
     <ClInclude Include="Prefabs\PortalGun.h" />
-    <ClInclude Include="Materials\PortalMaterial.h" />
+    <ClInclude Include="Materials\Portal\PortalMaterial.h" />
     <ClInclude Include="Scenes\Week 9\ParticleScene.h" />
     <ClInclude Include="Scenes\Week 10\PostProcessingScene.h" />
     <ClInclude Include="Materials\Post\PostGrayscale.h" />
