Got basic portal visuals working

--- a/OverlordEngine/OverlordEngine.vcxproj.filters
+++ b/OverlordEngine/OverlordEngine.vcxproj.filters
@@ -57,6 +57,7 @@
     <ClCompile Include="Deferred\DeferredLightRenderer.cpp" />
     <ClCompile Include="Deferred\DeferredRenderer.cpp" />
     <ClCompile Include="Deferred\QuadRenderer.cpp" />
+    <ClCompile Include="Graphics\PortalRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -125,5 +126,6 @@
     <ClInclude Include="Deferred\DeferredLightRenderer.h" />
     <ClInclude Include="Deferred\DeferredRenderer.h" />
     <ClInclude Include="Deferred\QuadRenderer.h" />
+    <ClInclude Include="Graphics\PortalRenderer.h" />
   </ItemGroup>
 </Project>
