--- a/OverlordProject/OverlordProject.vcxproj.filters
+++ b/OverlordProject/OverlordProject.vcxproj.filters
@@ -43,6 +43,7 @@
     <ClCompile Include="Materials\BasicMaterial.cpp" />
     <ClCompile Include="Materials\BasicMaterial_Deferred.cpp" />
     <ClCompile Include="Materials\Portal\PortalMaterial.cpp" />
+    <ClCompile Include="Scenes\Exam\MainMenuScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h" />
@@ -86,5 +87,6 @@
     <ClInclude Include="Materials\BasicMaterial.h" />
     <ClInclude Include="Materials\BasicMaterial_Deferred.h" />
     <ClInclude Include="Materials\Portal\PortalMaterial.h" />
+    <ClInclude Include="Scenes\Exam\MainMenuScene.h" />
   </ItemGroup>
 </Project>
