changed portal project name

--- a/OverlordProject/OverlordProject.vcxproj
+++ b/OverlordProject/OverlordProject.vcxproj
@@ -96,7 +96,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Materials\Post\PostBrightness.cpp" />
-    <ClCompile Include="Scenes\PortalExam\MainMenuScene.cpp" />
+    <ClCompile Include="Scenes\PortalRemake\MainMenuScene.cpp" />
     <ClCompile Include="Materials\BasicMaterial.cpp" />
     <ClCompile Include="Materials\BasicMaterial_Deferred.cpp" />
     <ClCompile Include="Materials\DiffuseMaterial_Skinned.cpp" />
@@ -107,7 +107,7 @@
     <ClCompile Include="Materials\Portal\PortalMaterial.cpp" />
     <ClCompile Include="Prefabs\PortalGun.cpp" />
     <ClCompile Include="Prefabs\Portal.cpp" />
-    <ClCompile Include="Scenes\PortalExam\PortalScene.cpp" />
+    <ClCompile Include="Scenes\PortalRemake\PortalScene.cpp" />
     <ClCompile Include="Prefabs\Character.cpp" />
     <ClCompile Include="Scenes\Week 10\PostProcessingScene.cpp" />
     <ClCompile Include="Scenes\Week 11\DeferredRenderingScene.cpp" />
@@ -158,7 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Materials\Post\PostBrightness.h" />
-    <ClInclude Include="Scenes\PortalExam\MainMenuScene.h" />
+    <ClInclude Include="Scenes\PortalRemake\MainMenuScene.h" />
     <ClInclude Include="Materials\BasicMaterial.h" />
     <ClInclude Include="Materials\BasicMaterial_Deferred.h" />
     <ClInclude Include="Materials\DiffuseMaterial_Skinned.h" />
@@ -169,7 +169,7 @@
     <ClInclude Include="Materials\Portal\PortalMaterial.h" />
     <ClInclude Include="Prefabs\PortalGun.h" />
     <ClInclude Include="Prefabs\Portal.h" />
-    <ClInclude Include="Scenes\PortalExam\PortalScene.h" />
+    <ClInclude Include="Scenes\PortalRemake\PortalScene.h" />
     <ClInclude Include="Prefabs\Character.h" />
     <ClInclude Include="Scenes\Week 10\PostProcessingScene.h" />
     <ClInclude Include="Scenes\Week 11\DeferredRenderingScene.h" />
